Sprint 1 P0: Replace all public-facing emojis with SVG icons & fix RTL arrow
- index.html: Replace 13 emojis with inline SVGs (step icons, value icons, footer contacts)
- Add data-i18n attributes to QR labels for App Store / Google Play translation
- partners.html: Fix RTL step-card arrow direction (← → →)
- homepage.js: Add QR label translations (آب ستور / جوجل بلاي), SVG footer contact translations
- about.js: Remove 16 emojis from info card titles and badges, SVG footer contacts
- refund.html + terms.html: Replace CSS content emojis with § symbol
- main.css: Add SVG icon CSS (step-icon, value-icon sizing + color inheritance, footer-contact-icon)

--- a/public/partners.html
+++ b/public/partners.html
@@ -160,7 +160,7 @@
         }
 
         html[dir="rtl"] .step-card::after {
-            content: '←';
+            content: '→';
             left: -20px;
             right: auto;
         }
