--- a/public/refund.html
+++ b/public/refund.html
@@ -213,7 +213,7 @@
         }
 
         .summary-card::before {
-            content: '💰';
+            content: '§';
             position: absolute;
             top: 20px;
             right: 30px;
