--- a/public/index.html
+++ b/public/index.html
@@ -753,7 +753,11 @@
             <div class="steps-grid">
                 <div class="step-card reveal">
                     <div class="step-icon">
-                        📱
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <rect x="5" y="2" width="14" height="20" rx="2" ry="2" />
+                            <line x1="12" y1="18" x2="12.01" y2="18" />
+                        </svg>
                         <span class="step-number-badge">1</span>
                     </div>
                     <h3 class="step-title" data-i18n="step1.title">Request</h3>
@@ -762,7 +766,10 @@
                 </div>
                 <div class="step-card reveal">
                     <div class="step-icon">
-                        ⚡
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2" />
+                        </svg>
                         <span class="step-number-badge">2</span>
                     </div>
                     <h3 class="step-title" data-i18n="step2.title">Compare Bids</h3>
@@ -771,7 +778,11 @@
                 </div>
                 <div class="step-card reveal">
                     <div class="step-icon">
-                        🔒
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
+                            <polyline points="9 12 11 14 15 10" />
+                        </svg>
                         <span class="step-number-badge">3</span>
                     </div>
                     <h3 class="step-title" data-i18n="step3.title">Pay Securely</h3>
@@ -780,7 +791,13 @@
                 </div>
                 <div class="step-card reveal">
                     <div class="step-icon">
-                        🚚
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <rect x="1" y="3" width="15" height="13" />
+                            <polygon points="16 8 20 8 23 11 23 16 16 16 16 8" />
+                            <circle cx="5.5" cy="18.5" r="2.5" />
+                            <circle cx="18.5" cy="18.5" r="2.5" />
+                        </svg>
                         <span class="step-number-badge">4</span>
                     </div>
                     <h3 class="step-title" data-i18n="step4.title">Receive at Door</h3>
@@ -852,42 +869,68 @@
             </div>
             <div class="value-grid">
                 <div class="value-card reveal">
-                    <div class="value-icon">🏆</div>
+                    <div class="value-icon"><svg width="36" height="36" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <circle cx="12" cy="8" r="7" />
+                            <polyline points="8.21 13.89 7 23 12 20 17 23 15.79 13.88" />
+                        </svg></div>
                     <h3 class="value-title" data-i18n="value1.title">Quality Guaranteed</h3>
                     <p class="value-desc" data-i18n="value1.desc">Every part is verified for quality. 7-day return
                         policy if anything doesn't
                         match your expectations.</p>
                 </div>
                 <div class="value-card reveal">
-                    <div class="value-icon">🚚</div>
+                    <div class="value-icon"><svg width="36" height="36" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <rect x="1" y="3" width="15" height="13" />
+                            <polygon points="16 8 20 8 23 11 23 16 16 16 16 8" />
+                            <circle cx="5.5" cy="18.5" r="2.5" />
+                            <circle cx="18.5" cy="18.5" r="2.5" />
+                        </svg></div>
                     <h3 class="value-title" data-i18n="value2.title">Same-Day Delivery</h3>
                     <p class="value-desc" data-i18n="value2.desc">Get parts delivered to your door across Doha within
                         hours. Real-time tracking
                         included.</p>
                 </div>
                 <div class="value-card reveal">
-                    <div class="value-icon">💰</div>
+                    <div class="value-icon"><svg width="36" height="36" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <line x1="12" y1="1" x2="12" y2="23" />
+                            <path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6" />
+                        </svg></div>
                     <h3 class="value-title" data-i18n="value3.title">Best Prices</h3>
                     <p class="value-desc" data-i18n="value3.desc">Compare quotes from multiple garages. Find the best
                         deal without calling
                         around.</p>
                 </div>
                 <div class="value-card reveal">
-                    <div class="value-icon">🔒</div>
+                    <div class="value-icon"><svg width="36" height="36" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <rect x="3" y="11" width="18" height="11" rx="2" ry="2" />
+                            <path d="M7 11V7a5 5 0 0 1 10 0v4" />
+                        </svg></div>
                     <h3 class="value-title" data-i18n="value4.title">Secure Payments</h3>
                     <p class="value-desc" data-i18n="value4.desc">Pay by card or COD. Escrow protection ensures your
                         money is safe until you're
                         satisfied.</p>
                 </div>
                 <div class="value-card reveal">
-                    <div class="value-icon">✓</div>
+                    <div class="value-icon"><svg width="36" height="36" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14" />
+                            <polyline points="22 4 12 14.01 9 11.01" />
+                        </svg></div>
                     <h3 class="value-title" data-i18n="value5.title">Verified Garages</h3>
                     <p class="value-desc" data-i18n="value5.desc">All garages are vetted and verified. Buy with
                         confidence from trusted sellers.
                     </p>
                 </div>
                 <div class="value-card reveal">
-                    <div class="value-icon">📱</div>
+                    <div class="value-icon"><svg width="36" height="36" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <rect x="5" y="2" width="14" height="20" rx="2" ry="2" />
+                            <line x1="12" y1="18" x2="12.01" y2="18" />
+                        </svg></div>
                     <h3 class="value-title" data-i18n="value6.title">Easy Mobile App</h3>
                     <p class="value-desc" data-i18n="value6.desc">Request parts, track orders, and manage everything
                         from our intuitive mobile
@@ -944,7 +987,7 @@
                             </svg>
                         </div>
                     </div>
-                    <span class="qr-label">App Store</span>
+                    <span class="qr-label" data-i18n="cta.appStore">App Store</span>
                 </div>
                 <div class="qr-item">
                     <div class="qr-code-box">
@@ -957,7 +1000,7 @@
                             </svg>
                         </div>
                     </div>
-                    <span class="qr-label">Google Play</span>
+                    <span class="qr-label" data-i18n="cta.googlePlay">Google Play</span>
                 </div>
             </div>
         </div>
@@ -996,10 +1039,27 @@
                 <div>
                     <h4 class="footer-title" data-i18n="footer.contactTitle">Contact</h4>
                     <ul class="footer-links">
-                        <li><a href="mailto:support@qscrap.qa" data-i18n="footer.email">📧 support@qscrap.qa</a></li>
-                        <li><a href="tel:+97450267974" dir="ltr" data-i18n="footer.phone">📞 +974 5026 7974</a></li>
-                        <li><a href="https://wa.me/97450267974" target="_blank" data-i18n="footer.whatsapp">💬 WhatsApp
-                                Support</a></li>
+                        <li><a href="mailto:support@qscrap.qa" data-i18n="footer.email"><svg class="footer-contact-icon"
+                                    width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                    <path
+                                        d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
+                                    <polyline points="22,6 12,13 2,6" />
+                                </svg> support@qscrap.qa</a></li>
+                        <li><a href="tel:+97450267974" dir="ltr" data-i18n="footer.phone"><svg
+                                    class="footer-contact-icon" width="16" height="16" viewBox="0 0 24 24" fill="none"
+                                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <path
+                                        d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
+                                </svg> +974 5026 7974</a></li>
+                        <li><a href="https://wa.me/97450267974" target="_blank" data-i18n="footer.whatsapp"><svg
+                                    class="footer-contact-icon" width="16" height="16" viewBox="0 0 24 24" fill="none"
+                                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                                    stroke-linejoin="round">
+                                    <path
+                                        d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z" />
+                                </svg> WhatsApp Support</a></li>
                     </ul>
                 </div>
             </div>
