--- a/public/terms.html
+++ b/public/terms.html
@@ -16,575 +16,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
-    <style>
-        /* ===== VVIP Platinum Design System ===== */
-        :root {
-            /* Qatar Premium Palette */
-            --qatar-maroon: #8D1B3D;
-            --qatar-maroon-dark: #6B1530;
-            --qatar-maroon-light: #F5E6EB;
-            --qatar-maroon-lighter: #FAF0F3;
-            --gold: #C9A227;
-            --gold-dark: #A68520;
-            --gold-light: #F5F0E1;
-
-            /* Neutrals */
-            --white: #FFFFFF;
-            --mist: #F8F8F8;
-            --pearl: #F0F0F0;
-            --silver: #E5E5E5;
-            --slate: #9A9A9A;
-            --charcoal: #3A3A3A;
-            --black: #1A1A1A;
-
-            /* Typography */
-            --font-sans: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        html {
-            scroll-behavior: smooth;
-        }
-
-        body {
-            font-family: var(--font-sans);
-            background: var(--mist);
-            color: var(--charcoal);
-            line-height: 1.7;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-        }
-
-        /* ===== Navigation ===== */
-        .nav {
-            background: var(--white);
-            padding: 0 24px;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            box-shadow: 0 2px 20px rgba(0, 0, 0, 0.05);
-        }
-
-        .nav-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            height: 72px;
-        }
-
-        .nav-logo {
-            display: flex;
-            align-items: center;
-            gap: 12px;
-            text-decoration: none;
-        }
-
-        .nav-logo img {
-            height: auto;
-            max-height: 50px;
-            max-width: 200px;
-            width: auto;
-            transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
-            filter: drop-shadow(0 4px 12px rgba(141, 27, 61, 0.15));
-        }
-
-        .nav-logo:hover img {
-            transform: translateY(-4px) scale(1.05);
-            filter: drop-shadow(0 16px 40px rgba(141, 27, 61, 0.35));
-        }
-
-        .nav-logo-text {
-            font-size: 24px;
-            font-weight: 700;
-            color: var(--qatar-maroon);
-            letter-spacing: -0.5px;
-        }
-
-        .nav-back {
-            display: inline-flex;
-            align-items: center;
-            gap: 8px;
-            padding: 10px 20px;
-            background: var(--qatar-maroon);
-            color: var(--white);
-            text-decoration: none;
-            border-radius: 100px;
-            font-weight: 600;
-            font-size: 14px;
-            transition: all 0.2s ease;
-        }
-
-        .nav-back:hover {
-            background: var(--qatar-maroon-dark);
-            transform: translateY(-1px);
-        }
-
-        /* ===== Hero Section ===== */
-        .hero {
-            background: linear-gradient(135deg, var(--qatar-maroon) 0%, var(--qatar-maroon-dark) 100%);
-            padding: 60px 24px;
-            text-align: center;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .hero::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.03'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-            opacity: 0.5;
-        }
-
-        .hero-content {
-            position: relative;
-            z-index: 1;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .hero-badge {
-            display: inline-flex;
-            align-items: center;
-            gap: 8px;
-            padding: 8px 20px;
-            background: rgba(201, 162, 39, 0.2);
-            border: 1px solid var(--gold);
-            border-radius: 100px;
-            font-size: 13px;
-            font-weight: 600;
-            color: var(--gold);
-            margin-bottom: 20px;
-        }
-
-        .hero h1 {
-            color: var(--white);
-            font-size: 42px;
-            font-weight: 800;
-            margin-bottom: 12px;
-            text-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-        }
-
-        .hero-arabic {
-            color: var(--gold);
-            font-size: 28px;
-            font-weight: 600;
-            direction: rtl;
-            margin-bottom: 16px;
-        }
-
-        .hero-date {
-            color: rgba(255, 255, 255, 0.8);
-            font-size: 14px;
-        }
-
-        /* ===== Main Content ===== */
-        .content-wrapper {
-            flex: 1;
-            padding: 60px 24px;
-        }
-
-        .container {
-            max-width: 900px;
-            margin: 0 auto;
-        }
-
-        /* Quick Summary Card */
-        .summary-card {
-            background: linear-gradient(135deg, var(--qatar-maroon) 0%, var(--qatar-maroon-dark) 100%);
-            border-radius: 20px;
-            padding: 32px;
-            margin-bottom: 40px;
-            color: var(--white);
-            position: relative;
-            overflow: hidden;
-        }
-
-        .summary-card::before {
-            content: '§';
-            position: absolute;
-            top: 20px;
-            right: 30px;
-            font-size: 60px;
-            opacity: 0.2;
-        }
-
-        .summary-card h2 {
-            font-size: 20px;
-            font-weight: 700;
-            margin-bottom: 12px;
-            color: var(--gold);
-        }
-
-        .summary-card p {
-            font-size: 16px;
-            line-height: 1.7;
-            color: var(--white);
-            opacity: 0.95;
-        }
-
-        /* Section Cards */
-        .section-card {
-            background: var(--white);
-            border-radius: 16px;
-            padding: 32px;
-            margin-bottom: 24px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
-            border: 1px solid var(--silver);
-            transition: all 0.3s ease;
-        }
-
-        .section-card:hover {
-            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.08);
-            transform: translateY(-2px);
-        }
-
-        .section-header {
-            display: flex;
-            align-items: center;
-            gap: 16px;
-            margin-bottom: 20px;
-        }
-
-        .section-number {
-            width: 40px;
-            height: 40px;
-            background: var(--qatar-maroon);
-            color: var(--white);
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: 700;
-            font-size: 16px;
-            flex-shrink: 0;
-        }
-
-        .section-title {
-            color: var(--black);
-            font-size: 22px;
-            font-weight: 700;
-        }
-
-        p {
-            margin-bottom: 16px;
-            color: var(--charcoal);
-        }
-
-        ul {
-            margin-left: 0;
-            margin-bottom: 16px;
-            list-style: none;
-        }
-
-        li {
-            margin-bottom: 10px;
-            padding-left: 28px;
-            position: relative;
-        }
-
-        li::before {
-            content: '✓';
-            position: absolute;
-            left: 0;
-            color: var(--gold);
-            font-weight: 700;
-        }
-
-        a {
-            color: var(--qatar-maroon);
-            text-decoration: none;
-            font-weight: 500;
-            transition: color 0.2s ease;
-        }
-
-        a:hover {
-            color: var(--gold);
-        }
-
-        /* Highlight Boxes */
-        .highlight-box {
-            background: var(--qatar-maroon-lighter);
-            border-left: 4px solid var(--qatar-maroon);
-            border-radius: 0 12px 12px 0;
-            padding: 20px 24px;
-            margin: 20px 0;
-        }
-
-        .highlight-box.gold {
-            background: var(--gold-light);
-            border-left-color: var(--gold);
-        }
-
-        .highlight-box p {
-            margin-bottom: 0;
-        }
-
-        .highlight-box strong {
-            color: var(--qatar-maroon);
-        }
-
-        /* Company Contact Card */
-        .company-card {
-            background: linear-gradient(135deg, var(--black) 0%, var(--charcoal) 100%);
-            border-radius: 20px;
-            padding: 40px;
-            color: var(--white);
-            margin-top: 40px;
-        }
-
-        .company-card h2 {
-            color: var(--gold);
-            font-size: 24px;
-            font-weight: 700;
-            margin-bottom: 24px;
-        }
-
-        .company-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 24px;
-        }
-
-        .company-item {
-            display: flex;
-            align-items: flex-start;
-            gap: 12px;
-        }
-
-        .company-icon {
-            width: 40px;
-            height: 40px;
-            background: rgba(201, 162, 39, 0.2);
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-shrink: 0;
-        }
-
-        .company-item-label {
-            font-size: 12px;
-            color: var(--slate);
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-            margin-bottom: 4px;
-        }
-
-        .company-item-value {
-            font-size: 15px;
-            color: var(--white);
-        }
-
-        .company-item-value a {
-            color: var(--gold);
-        }
-
-        .company-legal {
-            margin-top: 24px;
-            padding-top: 24px;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            text-align: center;
-        }
-
-        .company-legal-name {
-            font-size: 18px;
-            font-weight: 600;
-            margin-bottom: 8px;
-        }
-
-        .company-legal-arabic {
-            font-size: 16px;
-            direction: rtl;
-            color: var(--gold);
-        }
-
-        .company-cr {
-            margin-top: 12px;
-            font-size: 14px;
-            color: var(--slate);
-        }
-
-        /* Footer */
-        .footer {
-            background: var(--black);
-            color: var(--white);
-            text-align: center;
-            padding: 32px 24px;
-            font-size: 14px;
-        }
-
-        .footer p {
-            color: #FFFFFF;
-            opacity: 0.9;
-        }
-
-        .footer a {
-            color: var(--gold);
-        }
-
-        /* Responsive */
-        @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 28px;
-            }
-
-            .hero-arabic {
-                font-size: 22px;
-            }
-
-            .section-card {
-                padding: 24px;
-            }
-
-            .company-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .company-card {
-                padding: 24px;
-            }
-
-            .nav-logo-text {
-                display: none;
-            }
-        }
-
-        /* ===== Language Switcher ===== */
-        .lang-switcher {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            background: var(--mist);
-            padding: 6px 12px;
-            border-radius: 100px;
-        }
-
-        .lang-btn {
-            display: flex;
-            align-items: center;
-            gap: 4px;
-            padding: 6px 10px;
-            background: transparent;
-            border: none;
-            border-radius: 100px;
-            cursor: pointer;
-            font-size: 13px;
-            font-weight: 500;
-            color: var(--slate);
-            transition: all 0.2s ease;
-        }
-
-        .lang-btn:hover {
-            color: var(--qatar-maroon);
-        }
-
-        .lang-btn.active {
-            background: var(--white);
-            color: var(--qatar-maroon);
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-        }
-
-        .lang-divider {
-            color: var(--silver);
-            font-size: 12px;
-        }
-
-        .lang-flag {
-            font-size: 16px;
-        }
-
-        /* ===== RTL Support ===== */
-        [dir="rtl"] {
-            font-family: 'Inter', 'Noto Sans Arabic', 'Segoe UI', Tahoma, sans-serif;
-        }
-
-        [dir="rtl"] .nav-container {
-            /* RTL direction naturally reverses flex items */
-        }
-
-        [dir="rtl"] .section-header {
-            /* In RTL: row makes first item (number) go to RIGHT, flex-start = right edge */
-            flex-direction: row;
-            justify-content: flex-start;
-        }
-
-        [dir="rtl"] .section-header .section-title {
-            text-align: right;
-        }
-
-        [dir="rtl"] .company-grid {
-            direction: rtl;
-        }
-
-        /* RTL List Items - Checkmarks on Right */
-        [dir="rtl"] li {
-            padding-left: 0;
-            padding-right: 28px;
-        }
-
-        [dir="rtl"] li::before {
-            left: auto;
-            right: 0;
-        }
-
-        /* RTL Highlight Boxes - Border on Right */
-        [dir="rtl"] .highlight-box {
-            border-left: none;
-            border-right: 4px solid var(--qatar-maroon);
-            border-radius: 12px 0 0 12px;
-        }
-
-        [dir="rtl"] .highlight-box.gold {
-            border-right-color: var(--gold);
-        }
-
-        [dir="rtl"] .highlight-box.success {
-            border-right-color: var(--success);
-        }
-
-        [dir="rtl"] .highlight-box.warning {
-            border-right-color: var(--warning);
-        }
-
-        /* RTL Hero Badge */
-        [dir="rtl"] .hero-badge {
-            flex-direction: row-reverse;
-        }
-
-        /* Hide duplicate Arabic subtitle in RTL mode */
-        [dir="rtl"] .hero-arabic {
-            display: none;
-        }
-
-        /* RTL Company Items - Icon on RIGHT */
-        [dir="rtl"] .company-item {
-            /* In RTL: row makes first item (icon) go to RIGHT */
-            flex-direction: row;
-            text-align: right;
-        }
-
-        @media (max-width: 768px) {
-            .lang-switcher {
-                padding: 4px 8px;
-            }
-
-            .lang-text {
-                display: none;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="/css/legal-pages.css">
 </head>
 
 <body>
