Sprint 3 P2: Responsive & Polish — Mobile footer, widget clearance, Gold Prompt
Responsive:
- Mobile footer centering: text-align center + footer-column align-items center
- Floating widget clearance: 80px margin-bottom on last step-card/value-card at mobile

Conversion & Copywriting:
- Gold Prompt compliance: 'Download App - It's Free' → 'Download the App' (EN)
- Gold Prompt compliance: 'حمّل التطبيق مجاناً' → 'حمّل التطبيق' (AR)
- CTA download button pulse: gold glow animation fires 2x after 2s delay

Polish:
- Updated homepage.js translations and index.html hardcoded text
- Added main.css CTA pulse keyframe with reduced-motion respect

--- a/public/index.html
+++ b/public/index.html
@@ -584,7 +584,7 @@
                             <polyline points="7 10 12 15 17 10" />
                             <line x1="12" y1="15" x2="12" y2="3" />
                         </svg>
-                        <span data-i18n="hero.cta1">Download App - It's Free</span>
+                        <span data-i18n="hero.cta1">Download the App</span>
                     </a>
                     <a href="/partners.html" class="btn-hero-secondary">
                         <span data-i18n="hero.cta2">For Businesses</span>
