Sprint 4 P3: Performance & SEO — hreflang, canonical, font preload
SEO:
- Add canonical URL + hreflang (en/ar/x-default) tags to all 5 non-index pages
  - about.html, partners.html, privacy.html, terms.html, refund.html
- index.html already had hreflang tags

Performance:
- Add font preload hint for Inter Google Font CSS on index.html
- font-display: swap already present on all pages via Google Fonts URL param

--- a/public/about.html
+++ b/public/about.html
@@ -21,6 +21,12 @@
         content="Discover how QScrap is transforming Qatar's automotive parts industry with technology and trust.">
     <meta property="og:image" content="https://www.qscrap.qa/assets/og-about.jpg">
 
+    <!-- Canonical & Language -->
+    <link rel="canonical" href="https://www.qscrap.qa/about">
+    <link rel="alternate" hreflang="en" href="https://www.qscrap.qa/about">
+    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/ar/about">
+    <link rel="alternate" hreflang="x-default" href="https://www.qscrap.qa/about">
+
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
