--- a/public/partners.html
+++ b/public/partners.html
@@ -21,6 +21,12 @@
         content="Join Qatar's leading automotive parts marketplace. Verified garages, guaranteed payouts, zero upfront costs.">
     <meta property="og:image" content="https://www.qscrap.qa/assets/og-partners.jpg">
 
+    <!-- Canonical & Language -->
+    <link rel="canonical" href="https://www.qscrap.qa/partners">
+    <link rel="alternate" hreflang="en" href="https://www.qscrap.qa/partners">
+    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/ar/partners">
+    <link rel="alternate" hreflang="x-default" href="https://www.qscrap.qa/partners">
+
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
