--- a/public/privacy.html
+++ b/public/privacy.html
@@ -8,6 +8,12 @@
     <meta name="description"
         content="QScrap Privacy Policy - Learn how we protect your personal data. Qatar's leading automotive parts marketplace.">
 
+    <!-- Canonical & Language -->
+    <link rel="canonical" href="https://www.qscrap.qa/privacy">
+    <link rel="alternate" hreflang="en" href="https://www.qscrap.qa/privacy">
+    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/ar/privacy">
+    <link rel="alternate" hreflang="x-default" href="https://www.qscrap.qa/privacy">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
