--- a/public/refund.html
+++ b/public/refund.html
@@ -8,6 +8,12 @@
     <meta name="description"
         content="QScrap Refund Policy - Learn about our cancellation and refund procedures. Qatar's leading automotive parts marketplace.">
 
+    <!-- Canonical & Language -->
+    <link rel="canonical" href="https://www.qscrap.qa/refund">
+    <link rel="alternate" hreflang="en" href="https://www.qscrap.qa/refund">
+    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/ar/refund">
+    <link rel="alternate" hreflang="x-default" href="https://www.qscrap.qa/refund">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,12 +35,12 @@
             <!-- Language Switcher -->
             <div class="lang-switcher" id="langSwitcher">
                 <button class="lang-btn active" data-lang="en" aria-label="English">
-                    
+
                     <span class="lang-text">EN</span>
                 </button>
                 <span class="lang-divider">|</span>
                 <button class="lang-btn" data-lang="ar" aria-label="العربية">
-                    
+
                     <span class="lang-text">AR</span>
                 </button>
             </div>
