--- a/public/terms.html
+++ b/public/terms.html
@@ -8,6 +8,12 @@
     <meta name="description"
         content="QScrap Terms of Service - Read our terms and conditions. Qatar's leading automotive parts marketplace.">
 
+    <!-- Canonical & Language -->
+    <link rel="canonical" href="https://www.qscrap.qa/terms">
+    <link rel="alternate" hreflang="en" href="https://www.qscrap.qa/terms">
+    <link rel="alternate" hreflang="ar" href="https://www.qscrap.qa/ar/terms">
+    <link rel="alternate" hreflang="x-default" href="https://www.qscrap.qa/terms">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
