--- a/public/index.html
+++ b/public/index.html
@@ -53,10 +53,6 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <link rel="preload" as="style"
-        href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;500;600;700;800&display=swap">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet">
 
     <!-- ============================================ -->
     <!-- STRUCTURED DATA: Organization + LocalBusiness -->
@@ -595,7 +591,7 @@
                     <a href="/partners.html" class="btn-hero-secondary">
                         <span data-i18n="hero.cta2">For Businesses</span>
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                            stroke-width="2" aria-hidden="true">
+                            stroke-width="2">
                             <line x1="5" y1="12" x2="19" y2="12" />
                             <polyline points="12 5 19 12 12 19" />
                         </svg>
@@ -1051,13 +1047,13 @@
                                     <path
                                         d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
                                     <polyline points="22,6 12,13 2,6" />
-                                </svg> <span dir="ltr">support@qscrap.qa</span></a></li>
+                                </svg> support@qscrap.qa</a></li>
                         <li><a href="tel:+97450267974" data-i18n="footer.phone"><svg class="footer-contact-icon"
                                     width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
                                     <path
                                         d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
-                                </svg> <span dir="ltr">+974 5026 7974</span></a></li>
+                                </svg> +974 5026 7974</a></li>
                         <li><a href="https://wa.me/97450267974" target="_blank" data-i18n="footer.whatsapp"><svg
                                     class="footer-contact-icon" width="16" height="16" viewBox="0 0 24 24" fill="none"
                                     stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
@@ -1082,16 +1078,14 @@
         .floating-action-widget {
             position: fixed;
             bottom: 28px;
-            inset-inline-end: 28px;
+            right: 28px;
             z-index: 9999;
             display: flex;
             align-items: center;
             gap: 12px;
             background: linear-gradient(135deg, #8D1B3D 0%, #6B1530 100%);
             color: #fff;
-            padding: 14px;
-            padding-inline-start: 18px;
-            padding-inline-end: 24px;
+            padding: 14px 24px 14px 18px;
             border-radius: 100px;
             box-shadow: 0 8px 32px rgba(141, 27, 61, 0.35), 0 2px 8px rgba(0, 0, 0, 0.15);
             cursor: pointer;
@@ -1160,20 +1154,28 @@
             animation: none;
         }
 
-        /* RTL: Arabic font for widget */
+        /* RTL Positioning */
         html[dir="rtl"] .floating-action-widget {
-            font-family: 'Noto Sans Arabic', 'Cairo', 'Inter', sans-serif;
+            right: auto;
+            left: 28px;
+            flex-direction: row-reverse;
+            padding: 14px 18px 14px 24px;
+            font-family: 'Cairo', 'Inter', sans-serif;
         }
 
         /* Mobile responsiveness */
         @media (max-width: 768px) {
             .floating-action-widget {
                 bottom: 20px;
-                inset-inline-end: 16px;
-                padding: 12px;
-                padding-inline-start: 14px;
-                padding-inline-end: 18px;
+                right: 16px;
+                padding: 12px 18px 12px 14px;
                 font-size: 14px;
+            }
+
+            html[dir="rtl"] .floating-action-widget {
+                right: auto;
+                left: 16px;
+                padding: 12px 14px 12px 18px;
             }
         }
 
