fix(terms): Unify warranty to 7 days for all parts (new + used)
Aligns warranty period with the 7-day escrow/payout hold.
Updated: terms.html, legal-pages.js (EN+AR), TermsScreen.tsx (EN+AR),
contacts.ts, i18n/en.ts, i18n/ar.ts

Also includes business hours update: Sat-Thu 8AM-5PM, Fri OFF

--- a/public/terms.html
+++ b/public/terms.html
@@ -179,13 +179,11 @@
                 <ul>
                     <li data-i18n="terms.s5.item1">Part warranties are provided by individual garages through the QScrap
                         platform</li>
-                    <li data-i18n="terms.s5.item2">Warranty periods range from 7 to 30 days depending on part condition
-                    </li>
-                    <li data-i18n="terms.s5.item3">New parts: 30-day warranty</li>
-                    <li data-i18n="terms.s5.item4">Used parts (Excellent/Good): 14-day warranty</li>
-                    <li data-i18n="terms.s5.item5">Used parts (Fair): 7-day warranty</li>
-                    <li data-i18n="terms.s5.item6">Disputes must be raised within the applicable warranty period</li>
-                    <li data-i18n="terms.s5.item7">QScrap will mediate disputes between customers and garages</li>
+                    <li data-i18n="terms.s5.item2">All parts carry a standard 7-day warranty from date of delivery</li>
+                    <li data-i18n="terms.s5.item3">The 7-day warranty applies equally to new and used parts of all
+                        conditions</li>
+                    <li data-i18n="terms.s5.item4">Disputes must be raised within the 7-day warranty period</li>
+                    <li data-i18n="terms.s5.item5">QScrap will mediate disputes between customers and garages</li>
                 </ul>
             </article>
 
