fix(website): Remove unverified CR, PO Box, address, landline from all pages
- CR 155892 removed from all pages (pending MOCI registration)
- PO Box 32544 removed (does not exist)
- Physical address 'Industrial Area, Street 10' removed (incorrect)
- Landline/second phone removed from about page
- Simplified JSON-LD to city-level (Doha, Qatar)
- Phone relabeled as WhatsApp Support
- Garage CR form field preserved on partners page
- All footer legal lines simplified to: Company Name | Doha, Qatar

Files changed: index.html, website.html, about.html, privacy.html, terms.html,
refund.html, partners.html, homepage.js, about.js, legal-pages.js

--- a/public/about.html
+++ b/public/about.html
@@ -1329,14 +1329,8 @@
                         QScrap Services & Trading L.L.C<br>
                         كيوسكراب للخدمات والتجارة ذ.م.م
                     </p>
-                    <p data-i18n="info.legal.cr">
-                        <strong>Commercial Registration:</strong><br>
-                        CR Number: 155892
-                    </p>
-                    <p data-i18n="info.legal.address">
-                        <strong>Registered Address:</strong><br>
-                        P.O. Box 32544<br>
-                        Industrial Area Street 10<br>
+                    <p data-i18n="info.legal.location">
+                        <strong>Location:</strong><br>
                         Doha, Qatar
                     </p>
                 </div>
@@ -1347,13 +1341,8 @@
                         <a href="mailto:support@qscrap.qa">support@qscrap.qa</a>
                     </p>
                     <p data-i18n="info.contact.mobile">
-                        <strong>Mobile:</strong><br>
-                        <a href="tel:+97450267974" dir="ltr">+974 5026 7974</a><br>
-                        <a href="tel:+97455906912" dir="ltr">+974 5590 6912</a>
-                    </p>
-                    <p data-i18n="info.contact.landline">
-                        <strong>Landline:</strong><br>
-                        <span dir="ltr">+974 5026 7974</span>
+                        <strong>WhatsApp Support:</strong><br>
+                        <a href="tel:+97450267974" dir="ltr">+974 5026 7974</a>
                     </p>
                     <p data-i18n="info.contact.hours">
                         <strong>Business Hours:</strong><br>
@@ -1452,8 +1441,8 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p class="footer-legal" data-i18n="footer.legalInfo">QScrap Services & Trading L.L.C | CR: 155892 | P.O.
-                    Box 32544, Doha, Qatar</p>
+                <p class="footer-legal" data-i18n="footer.legalInfo">QScrap Services &amp; Trading L.L.C | Doha, Qatar
+                </p>
                 <p class="footer-copyright" data-i18n="footer.copyright">© 2026 QScrap. All rights reserved.</p>
             </div>
         </div>
