--- a/public/index.html
+++ b/public/index.html
@@ -79,11 +79,9 @@
         "email": "support@qscrap.qa",
         "address": {
             "@type": "PostalAddress",
-            "streetAddress": "Industrial Area, Street 10",
-            "postOfficeBoxNumber": "32544",
+            "streetAddress": "Doha",
             "addressLocality": "Doha",
             "addressRegion": "Ad Dawhah",
-            "postalCode": "32544",
             "addressCountry": "QA"
         },
         "geo": {
@@ -375,7 +373,7 @@
                 "name": "Is QScrap safe for buying car parts?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text": "Yes, QScrap is 100% safe. All garages are verified, payments are protected with escrow, and every part comes with a 7-day return policy. QScrap is a registered Qatar company (CR: 155892)."
+                    "text": "Yes, QScrap is 100% safe. All garages are verified, payments are protected with escrow, and every part comes with a 7-day return policy. QScrap is a registered Qatar company."
                 }
             },
             {
@@ -1065,8 +1063,8 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p class="footer-legal" data-i18n="footer.legalInfo">QScrap Services & Trading L.L.C | CR: 155892 | P.O.
-                    Box 32544, Doha, Qatar</p>
+                <p class="footer-legal" data-i18n="footer.legalInfo">QScrap Services &amp; Trading L.L.C | Doha, Qatar
+                </p>
                 <p class="footer-copyright" data-i18n="footer.copyright">© 2026 QScrap. All rights reserved.</p>
             </div>
         </div>
