--- a/public/partners.html
+++ b/public/partners.html
@@ -3499,7 +3499,8 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p class="footer-legal">QScrap Services & Trading L.L.C | كيوسكراب للخدمات والتجارة ذ.م.م | CR: 155892
+                <p class="footer-legal">QScrap Services &amp; Trading L.L.C | كيوسكراب للخدمات والتجارة ذ.م.م | Doha,
+                    Qatar
                 </p>
                 <p class="footer-copyright" data-i18n="footer.copyright">© 2026 QScrap. All rights reserved.</p>
             </div>
