--- a/public/privacy.html
+++ b/public/privacy.html
@@ -91,9 +91,9 @@
                     <div class="section-number" data-i18n="privacy.s1.num">1</div>
                     <h2 class="section-title" data-i18n="privacy.s1.title">Introduction & Scope</h2>
                 </div>
-                <p data-i18n="privacy.s1.p1">QScrap Services & Trading L.L.C / كيوسكراب للخدمات والتجارة ذ.م.م is a
+                <p data-i18n="privacy.s1.p1">QScrap Services &amp; Trading L.L.C / كيوسكراب للخدمات والتجارة ذ.م.م is a
                     company registered in the
-                    State of Qatar (CR: 155892) operating the QScrap Customer App and QScrap Driver App (collectively,
+                    State of Qatar operating the QScrap Customer App and QScrap Driver App (collectively,
                     "the Apps"). This Privacy Policy applies to all users:</p>
                 <ul>
                     <li data-i18n="privacy.s1.user1"><strong>Customers:</strong> Users seeking automotive spare parts
@@ -440,20 +440,18 @@
                     <div class="company-item">
                         <div class="company-icon">📍</div>
                         <div>
-                            <div class="company-item-label" data-i18n="privacy.contact.address">Address</div>
-                            <div class="company-item-value" data-i18n="privacy.contact.addressValue">Industrial Area,
-                                Street 10<br>P.O. Box 32544, Doha, Qatar
+                            <div class="company-item-label" data-i18n="privacy.contact.address">Location</div>
+                            <div class="company-item-value" data-i18n="privacy.contact.addressValue">Doha, Qatar
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="company-legal">
-                    <div class="company-legal-name" data-i18n="refund.contact.company">QScrap Services & Trading L.L.C
+                    <div class="company-legal-name" data-i18n="refund.contact.company">QScrap Services &amp; Trading
+                        L.L.C
                     </div>
                     <div class="company-legal-arabic" data-i18n="refund.contact.companyAr">كيوسكراب للخدمات والتجارة
                         ذ.م.م</div>
-                    <div class="company-cr" data-i18n="refund.contact.cr">Commercial Registration: 155892 | State of
-                        Qatar</div>
                 </div>
             </div>
 
