--- a/public/website.html
+++ b/public/website.html
@@ -53,8 +53,6 @@
         "description": "Qatar's Premium Automotive Parts Marketplace",
         "address": {
             "@type": "PostalAddress",
-            "streetAddress": "Industrial Area, Street 10",
-            "postOfficeBoxNumber": "32544",
             "addressLocality": "Doha",
             "addressCountry": "QA"
         },
@@ -535,7 +533,7 @@
                 <div class="footer-legal">
                     <div class="footer-legal-name">QScrap Services & Trading L.L.C</div>
                     <div class="footer-legal-name-ar">كيوسكراب للخدمات والتجارة ذ.م.م</div>
-                    <div class="footer-legal-name" style="margin-top: 8px;">CR: 155892 | State of Qatar</div>
+                    <div class="footer-legal-name" style="margin-top: 8px;">Doha, Qatar</div>
                 </div>
 
                 <div class="footer-contact">
@@ -561,7 +559,7 @@
                             <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z" />
                             <circle cx="12" cy="10" r="3" />
                         </svg>
-                        P.O. Box 32544, Industrial Area St 10
+                        Doha, Qatar
                     </a>
                 </div>
 
