fix(website): Extend step 4 description to match other card lengths

--- a/public/index.html
+++ b/public/index.html
@@ -802,7 +802,7 @@
                     </div>
                     <h3 class="step-title" data-i18n="step4.title">Receive at Door</h3>
                     <p class="step-desc" data-i18n="step4.desc">Track your order in real-time and receive it at your
-                        doorstep.</p>
+                        doorstep. Same-day delivery with a 7-day return guarantee.</p>
                 </div>
             </div>
         </div>
