fix(gallery): Replace BMW with Industrial Workshop, remove orphan 6th row

--- a/public/index.html
+++ b/public/index.html
@@ -836,10 +836,10 @@
                             Selection</span></div>
                 </div>
                 <div class="gallery-item wide reveal">
-                    <img src="/assets/images/parts/wp8391790-auto-parts-wallpapers.jpg" alt="BMW Parts Knolling"
-                        loading="lazy">
-                    <div class="gallery-item-overlay"><span class="gallery-item-text" data-i18n="gallery.item4">Premium
-                            BMW Components</span>
+                    <img src="/assets/images/parts/connect-part-to-people-10.jpg" alt="Garage Workshop" loading="lazy">
+                    <div class="gallery-item-overlay"><span class="gallery-item-text"
+                            data-i18n="gallery.item4">Industrial
+                            Workshop</span>
                     </div>
                 </div>
                 <div class="gallery-item reveal-left">
@@ -848,11 +848,6 @@
                     <div class="gallery-item-overlay"><span class="gallery-item-text" data-i18n="gallery.item5">Luxury
                             Parts Available</span>
                     </div>
-                </div>
-                <div class="gallery-item reveal-right">
-                    <img src="/assets/images/parts/connect-part-to-people-10.jpg" alt="Garage Workshop" loading="lazy">
-                    <div class="gallery-item-overlay"><span class="gallery-item-text"
-                            data-i18n="gallery.item6">Industrial Workshop</span></div>
                 </div>
             </div>
         </div>
