--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -1609,6 +1609,9 @@
                     </h4>
                     <p id="orderModalNotes" style="color: var(--text-secondary); font-size: 14px; margin: 0;"></p>
                 </div>
+
+                <!-- Print Packing Slip Button (dynamically populated by JS) -->
+                <div id="orderModalPrintBtn" style="display: none; text-align: center; padding-top: 16px; border-top: 1px solid var(--border); margin-top: 8px;"></div>
             </div>
         </div>
     </div>
